--- a/styles/guitars.module.css
+++ b/styles/guitars.module.css
@@ -46,3 +46,38 @@
     background-color: var(--primary);
 }
 
+.form {
+    margin-top: 4rem;
+    display: grid;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form label {
+    font-size: 2.2rem;
+}
+
+.form select {
+    border: 1px solid var(--black);
+    padding: 0.6rem;
+    text-align: center;
+    border-radius: 0.8rem;
+}
+
+.form input[type="submit"] {
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    padding: 1rem;
+    background-color: var(--black);
+    color: var(--white);
+    border-radius: 0.8rem;
+    transition-property: background-color;
+    transition-duration: 300ms;
+}
+.form input[type="submit"]:hover {
+    background-color: var(--primary);
+
+}
