--- a/styles/cart.module.css
+++ b/styles/cart.module.css
@@ -14,6 +14,51 @@
     padding: 3rem;
 }
 
+.product {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 4rem;
+    align-items: center;
+    padding: 3rem 0;
+    border-bottom: 1px solid #cfcfcf;
+}
+.product:last-of-type {
+    border: none;
+}
+
+.product p {
+    margin: 0 0 1rem 0;
+}
+
+.product span {
+    font-weight: 900;
+    font-size: 3.2rem;
+}
+
+.name {
+    font-weight: 700;
+    font-size: 4.2rem;
+}
+
+.select {
+    all: unset;
+    border: 1px solid var(--black);
+    padding: .5rem;
+    text-align: center;
+    border-radius: .8rem;
+    width: 25%;
+    margin-bottom: 2rem;
+}
+
+.price {
+    font-weight: 700;
+    color: var(--primary)
+}
+
+.subtotal {
+    font-size: 2.2rem;
+}
+
 .resume {
     background-color: #f9fafb;
     padding: 3rem;
