--- a/styles/cart.module.css
+++ b/styles/cart.module.css
@@ -15,6 +15,7 @@
 }
 
 .product {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 4rem;
@@ -66,4 +67,16 @@
     position: sticky;
     top: 3rem;
     
+}
+
+.delete {
+    all: unset;
+    position: absolute;
+    top: 3rem;
+    right: 1rem;
+    font-weight: 900;
+}
+
+.delete:hover {
+    cursor: pointer;
 }
